<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/get_otp"
        android:layout_width="73dp"
        android:layout_height="22dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="56dp"
        android:text="Get OTP"
        android:textAppearance="@style/get_otp"
        android:gravity="top"
        />


    <TextView
        android:id="@+id/enter_your_"
        android:layout_width="220dp"
        android:layout_height="72dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="86dp"
        android:textStyle="bold"
        android:text="@string/enter_your_"
        android:textAppearance="@style/enter_your_"
        android:gravity="top"
        />

    <EditText
        android:id="@+id/countrycode"
        android:layout_width="33dp"
        android:background="@null"
        android:layout_height="22dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="47dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="177dp"
        android:text="@string/some_id"
        android:textAppearance="@style/some_id"
        android:gravity="top"
        />

    <EditText
        android:id="@+id/phno"
        android:background="@null"
        android:layout_width="119dp"
        android:layout_height="22dp"
        android:inputType="phone"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="117dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="177dp"
        android:textAppearance="@style/some_id2"
        android:gravity="center_horizontal|top"
        />

    <View
        android:id="@+id/rectangle_1"
        android:layout_width="64dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="31dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="170dp"
        android:background="@drawable/rectangle_1"
        />


    <View
        android:id="@+id/rectangle_2"
        android:layout_width="147dp"
        android:layout_height="36dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="103dp"
        android:layout_marginTop="169dp"
        android:background="@drawable/rectangle_2" />

    <View
        android:id="@+id/rectangle_3"
        android:layout_width="96dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="32dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="225dp"
        android:background="@drawable/rectangle_3"
        />

    <TextView
        android:id="@+id/continuebtn"
        android:layout_width="63dp"
        android:layout_height="17dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="49dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="236dp"
        android:text="@string/continue2"
        android:textAppearance="@style/continue2"
        android:gravity="center_horizontal|top"
        />



    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:indeterminateTint="@color/yellow"

        />
  </RelativeLayout>